--- a/cbpunk-game.html
+++ b/cbpunk-game.html
@@ -93,6 +93,8 @@
               <p style="color: black;">Your Rating</p>
           </div>
           <p class="remark"></p>
+        
+        <button class="read-btn"><a href="s-review.html"> Read GameBench Review &gt;&gt;</a></button>
 
       </div>
 
